--- a/tdc_7.html
+++ b/tdc_7.html
@@ -2,114 +2,169 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>革镇堡木材市场</title>
-  <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>革镇堡木材市场</title>
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
 
-  <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+    <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-  <div class="page  tdc-detail">
+<div class="page  tdc-detail">
     <div class="container">
-      <div class="logo"> <img src="./images/tdc_logo.png"> </div>
-      <div class="row" id="zlogo">
-        <div class="col-md-4"></div>
-        <div class="col-md-4"><img src="./images/tdc_head.png"></div>
-        <div class="col-md-4"></div>
-      </div>
+        <div class="logo"><img src="./images/tdc_logo.png"></div>
+        <div class="row" id="zlogo">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"><img src="./images/tdc_head.png"></div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
 
     <div class="main">
-      <div class="main-content">
+        <div class="main-content">
 
-        <div class="row" id="wlsp">
-          <div class="col-md-3 leftpart">
-            <div class="titlepart">
-              <h3>革镇堡<br/>木材市场</h3>
-              
-            </div>
-            <div class=" bodypart">
-              <p class="desc typing-ani">
+            <div class="row" id="wlsp">
+                <div class="col-md-3 leftpart">
+                    <div class="titlepart">
+                        <h3>革镇堡<br/>木材市场</h3>
+
+                    </div>
+                    <div class=" bodypart">
+                        <p class="desc typing-ani">
                 <span class="text">位于甘井子区革镇堡街道的木材市场，占地面积18万m²。铁路专用线2条，32T门式电动起重机1台，夹钳装载机2台。主要为木材客户提供接卸、仓储、加工、配送等服务，年木材接卸、仓储、加工量20余万吨。
                 </span>
-              </p>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-9 rightpart">
+                    <div class="titlepart">
+                    </div>
+                    <div id="image_list" class=" bodypart">
+                        <div class="grid" style="display:none;">
+
+                            <div class="col2-60b-left">
+                                <div class="height-1-3">
+                                    <div class="width-1-3">
+                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 90%;">
+                                            没有<br>图片
+                                        </div></span>
+                                    </div>
+                                    <div class="width-1-3">
+                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 90%;">
+                                            没有<br>图片
+                                        </div></span>
+                                    </div>
+                                    <div class="width-1-3">
+                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
+                                            没有<br>图片
+                                        </div></span>
+                                    </div>
+                                </div>
+                                <div class="height-2-3">
+                                    <!--<a href="images/tdc7/i2.jpg" data-lightbox="lightbox"><img-->
+                                            <!--src="./images/tdc7/dimg_03-2.png" class=""-->
+                                            <!--style="width:100%;padding-bottom: 8px;"></a>-->
+                                      <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
+                                            没有<br>图片
+                                        </div></span>
+                                </div>
+                            </div>
+
+                            <div class="col2-40b-right" style="padding: 0 0 0 8px;"> <!--右边40%-->
+                                <div class="height-1-3" style="padding: 0 0 8px 0">  <!--右第一行-->
+                                    <a href="images/tdc7/i1.jpg" data-lightbox="lightbox"><img
+                                    src="./images/tdc7/i1.jpg" class="img-fullw"
+                                    style=""></a>
+                                </div>
+                                <div class="height-1-3" style="padding: 8px 0">  <!--右第二行-->
+                                    <a href="images/tdc7/i2.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tdc7/i2.jpg" class="img-fullw"
+                                            style=""></a>
+                                </div>
+                                <div class="height-1-3" style="padding: 8px 0 0 0;">  <!--右第3行-->
+                                    <a href="images/tdc7/i3.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tdc7/i3.jpg" class="img-fullw"
+                                            style=""></a>
+                                </div>
+                            </div>
+
+
+                            <!--<div class="col-1-2-top">-->
+                                <!--<a href="images/tdc7/i1.jpg" data-lightbox="lightbox"><img-->
+                                        <!--src="./images/tdc7/gimg_03.png"></a>-->
+                            <!--</div>-->
+                            <!--<div class="col-1-2-bottom">-->
+                                <!--<div class="row-1-2-left">-->
+                                    <!--<a href="images/tdc7/i2.jpg" data-lightbox="lightbox"><img-->
+                                            <!--src="./images/tdc7/gimg_06.png" class=""></a>-->
+                                <!--</div>-->
+                                <!--<div class="row-1-2-right">-->
+                                    <!--<a href="images/tdc7/i3.jpg" data-lightbox="lightbox"><img-->
+                                            <!--src="./images/tdc7/gimg_08.png" class=""></a>-->
+                                <!--</div>-->
+                            <!--</div>-->
+
+                        </div>
+                        <div class="swiper swiper-container">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide"><img src="images/tdc7/i1.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc7/i2.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc7/i3.jpg"></div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
 
             </div>
-
-          </div>
-          <div class="col-md-9 rightpart" >
-            <div class="titlepart">
-            </div>
-            <div id="image_list" class=" bodypart">
-              <div class="grid" style="display:none;">
-                <div class="col-1-2-top">
-                <a href="images/tdc7/i1.jpg" data-lightbox="lightbox" ><img src="./images/tdc7/gimg_03.png"></a>
-                </div>
-                <div class="col-1-2-bottom">
-                  <div class="row-1-2-left">
-                    <a href="images/tdc7/i2.jpg" data-lightbox="lightbox" ><img src="./images/tdc7/gimg_06.png" class=""></a>
-                  </div>
-                  <div class="row-1-2-right">
-                    <a href="images/tdc7/i3.jpg" data-lightbox="lightbox" ><img src="./images/tdc7/gimg_08.png" class=""></a>
-                  </div>
-                </div>
-
-              </div>
-              <div class="swiper swiper-container">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">	<img src="images/tdc7/i1.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc7/i2.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc7/i3.jpg">	</div>
-                </div>
-              </div>
-
-            </div>
-          </div>
-
         </div>
-      </div>
     </div>
 
     <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
-      <div class="content">
-        <div class="col-md-3 leftpart">
-          <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-            <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-            <span>		视频 </span>
-          </a>
-        </div>
+        <div class="content">
+            <div class="col-md-3 leftpart">
+                <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal">
+                    <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
+                    <span>		视频 </span>
+                </a>
+            </div>
 
-        <div class="col-md-9 rightpart" >
-          <div class="pull-right">
-            <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
-            <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-            <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-            <audio id="audio-js"  class="audio-js">
-              <source src="audios/tdc/革镇堡木材市场.ogg" type="audio/ogg" />
-            </audio>
-          </div>
+            <div class="col-md-9 rightpart">
+                <div class="pull-right">
+                    <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();">
+                        返回 </a>
+                    <a class="back-home-btn ctl_btn" href="index.html"> 主页 </a>
+                    <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span
+                            class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
+                    <audio id="audio-js" class="audio-js">
+                        <source src="audios/tdc/革镇堡木材市场.ogg" type="audio/ogg"/>
+                    </audio>
+                </div>
+            </div>
         </div>
-      </div>
     </nav>
 
     <!-- Modal -->
 
-  </div>
-  <script src="scripts/jquery-1.9.1.min.js"></script>
-  <script src="scripts/bootstrap.min.js"></script>
+</div>
+<script src="scripts/jquery-1.9.1.min.js"></script>
+<script src="scripts/bootstrap.min.js"></script>
 
-  <script src="scripts/swiper.jquery.min.js"></script>
-  <script src="scripts/swiper.animate.min.js"></script>
-  <script src="scripts/video.js"></script>
-  <script src="scripts/lightbox.min.js"></script>
-  <script src="scripts/typing-animate.js"></script>
-  <script src="scripts/app.js"></script>
+<script src="scripts/swiper.jquery.min.js"></script>
+<script src="scripts/swiper.animate.min.js"></script>
+<script src="scripts/video.js"></script>
+<script src="scripts/lightbox.min.js"></script>
+<script src="scripts/typing-animate.js"></script>
+<script src="scripts/app.js"></script>
 
 </body>
 </html>
