--- a/1_1_zhigong4.html
+++ b/1_1_zhigong4.html
@@ -2,117 +2,135 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>铁越集团</title>
-  <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>铁越集团</title>
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
 
-  <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+    <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-  <div class="page  tdc-detail">
+<div class="page  tdc-detail">
     <div class="container">
-      <div class="logo"> <img src="./images/tdc_logo.png"> </div>
-      <div class="row" id="zlogo">
-        <div class="col-md-4"></div>
-        <div class="col-md-4"><img src="./images/zhigong/zhilist_02.png"></div>
-        <div class="col-md-4"></div>
-      </div>
+        <div class="logo"><img src="./images/tdc_logo.png"></div>
+        <div class="row" id="zlogo">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"><img src="./images/zhigong/zhilist_02.png"></div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
 
     <div class="main">
-      <div class="main-content">
+        <div class="main-content">
 
-        <div class="row" id="wlsp">
-          <div class="col-md-3 leftpart">
-            <div class="titlepart">
-              <h3>民主监督</h3>
-              
-            </div>
+            <div class="row" id="wlsp">
+                <div class="col-md-3 leftpart">
+                    <div class="titlepart">
+                        <h3>民主监督</h3>
 
-            <div class=" bodypart">
-              <p class="desc typing-ani">
+                    </div>
+
+                    <div class=" bodypart">
+                        <p class="desc typing-ani">
                 <span class="text">集团工会坚持依靠职工办企业方针，认真抓好职代会、对话会和职工代表视察制度的落实，对集团改革和经营发展重大政策措施积极征求职工群众的意见，充分尊重职工群众的知情权、参与权、表达权和监督权，不断拓展民主管理、民主监督的渠道和方法。
                 </span>
-              </p>
-            </div>
+                        </p>
+                    </div>
 
-          </div>
-          <div class="col-md-9 rightpart" >
-            <div class="titlepart">
-            </div>
-            <div id="image_list" class=" bodypart">
-
-              <ul class="jiandanglist grid" style="display:none;">
-                <li><a href="images/zhigong4/i1.jpg" data-lightbox="lightbox" > <img src="./images/zhigong/minzlist_03.png"></a>
-                </li>
-                <li><a href="images/zhigong4/i2.jpg" data-lightbox="lightbox" ><img src="./images/zhigong/minzlist_05.png"></a></li>
-                <li><a href="images/zhigong4/i5.jpg" data-lightbox="lightbox" ><img src="./images/zhigong/minzlist_07.png"></a></li>
-                <li><a href="images/zhigong4/i6.jpg" data-lightbox="lightbox" ><img src="./images/zhigong/minzlist_09.png"></a></li>
-
-                <li><a href="images/zhigong4/i4.jpg" data-lightbox="lightbox" ><img src="./images/zhigong/minzlist_15.png"></a></li>
-                <li><a href="images/zhigong4/i7.jpg" data-lightbox="lightbox" ><img src="./images/zhigong/minzlist_16.png"></a></li>
-                <li><a href="images/zhigong4/i3.jpg" data-lightbox="lightbox" ><img src="./images/zhigong/minzlist_17.png"></a></li>
-                <li><a href="images/zhigong4/i8.jpg" data-lightbox="lightbox" ><img src="./images/zhigong/minzlist_18.png"></a></li>
-
-                <li style="clear:both"><a href="images/zhigong4/i10.jpg" data-lightbox="lightbox" ><img src="./images/zhigong/minzlist_23.png"></a></li>
-                <li><a href="images/zhigong4/i9.jpg" data-lightbox="lightbox" ><img src="./images/zhigong/minzlist_25.png"></a></li>
-                <li><a href="images/zhigong4/i11.jpg" data-lightbox="lightbox" ><img src="./images/zhigong/minzlist_26.png"></a></li>
-
-              </ul>
-              <div class="swiper swiper-container">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">	<img src="images/zhigong4/i1.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/zhigong4/i2.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/zhigong4/i3.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/zhigong4/i4.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/zhigong4/i5.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/zhigong4/i6.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/zhigong4/i7.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/zhigong4/i8.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/zhigong4/i9.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/zhigong4/i10.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/zhigong4/i11.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/zhigong4/i1.jpg">	</div>
                 </div>
-              </div>
+                <div class="col-md-9 rightpart">
+                    <div class="titlepart">
+                    </div>
+                    <div id="image_list" class=" bodypart">
+
+                        <ul class="jiandanglist grid" style="display:none;">
+                            <li><a href="images/zhigong4/i1.jpg" data-lightbox="lightbox"> <img
+                                    src="./images/zhigong/minzlist_03.png"></a>
+                            </li>
+                            <li><a href="images/zhigong4/i2.jpg" data-lightbox="lightbox"><img
+                                    src="./images/zhigong/minzlist_05.png"></a></li>
+                            <li><a href="images/zhigong4/i5.jpg" data-lightbox="lightbox"><img
+                                    src="./images/zhigong/minzlist_07.png"></a></li>
+                            <li><a href="images/zhigong4/i6.jpg" data-lightbox="lightbox"><img
+                                    src="./images/zhigong/minzlist_09.png"></a></li>
+
+                            <li><a href="images/zhigong4/i3.jpg" data-lightbox="lightbox"><img
+                                    src="./images/zhigong/minzlist_17.png"></a></li>
+                            <li><a href="images/zhigong4/i4.jpg" data-lightbox="lightbox"><img
+                                    src="./images/zhigong/minzlist_15.png"></a></li>
+                            <li><a href="images/zhigong4/i7.jpg" data-lightbox="lightbox"><img
+                                    src="./images/zhigong/minzlist_16.png"></a></li>
+                            <li><a href="images/zhigong4/i8.jpg" data-lightbox="lightbox"><img
+                                    src="./images/zhigong/minzlist_18.png"></a></li>
+
+                            <li style="clear:both"><a href="images/zhigong4/i10.jpg" data-lightbox="lightbox"><img
+                                    src="./images/zhigong/minzlist_23.png"></a></li>
+                            <li><a href="images/zhigong4/i9.jpg" data-lightbox="lightbox"><img
+                                    src="./images/zhigong/minzlist_25.png"></a></li>
+                            <li>
+                                <!--<a href="images/zhigong4/i11.jpg" data-lightbox="lightbox"><img-->
+                                    <!--src="./images/zhigong/minzlist_26.png"></a>-->
+                                 <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
+                                            没有<br>图片
+                                        </div></span>
+                            </li>
+
+                        </ul>
+                        <div class="swiper swiper-container">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide"><img src="images/zhigong4/i1.jpg"></div>
+                                <div class="swiper-slide"><img src="images/zhigong4/i2.jpg"></div>
+                                <div class="swiper-slide"><img src="images/zhigong4/i3.jpg"></div>
+                                <div class="swiper-slide"><img src="images/zhigong4/i4.jpg"></div>
+                                <div class="swiper-slide"><img src="images/zhigong4/i5.jpg"></div>
+                                <div class="swiper-slide"><img src="images/zhigong4/i6.jpg"></div>
+                                <div class="swiper-slide"><img src="images/zhigong4/i7.jpg"></div>
+                                <div class="swiper-slide"><img src="images/zhigong4/i8.jpg"></div>
+                                <div class="swiper-slide"><img src="images/zhigong4/i9.jpg"></div>
+                                <div class="swiper-slide"><img src="images/zhigong4/i10.jpg"></div>
+                                <div class="swiper-slide"><img src="images/zhigong4/i11.jpg"></div>
+                                <div class="swiper-slide"><img src="images/zhigong4/i1.jpg"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
             </div>
 
-          </div>
-
         </div>
-
-      </div>
     </div>
-  </div>
-  <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
+</div>
+<nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
     <div class="content">
-      <div class="col-md-3 leftpart">
-        <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-          <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-          <span>		视频 </span>
-        </a>
-      </div>
-
-      <div class="col-md-9 rightpart" >
-        <div class="pull-right">
-          <a class="back-btn ctl_btn" href="1_1_zhigong1.html?noaudio=1" > 返回 </a>
-          <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-          <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-          <audio id="audio-js"  class="audio-js">
-            <source src="audios/party/9民主监督.ogg" type="audio/ogg" />
-          </audio>
+        <div class="col-md-3 leftpart">
+            <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal">
+                <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
+                <span>		视频 </span>
+            </a>
         </div>
-      </div>
-    </div>
-  </nav>
 
-  <!-- Modal -->
+        <div class="col-md-9 rightpart">
+            <div class="pull-right">
+                <a class="back-btn ctl_btn" href="1_1_zhigong1.html?noaudio=1"> 返回 </a>
+                <a class="back-home-btn ctl_btn" href="index.html"> 主页 </a>
+                <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up"
+                                                                                  aria-hidden="true"></span> </a>
+                <audio id="audio-js" class="audio-js">
+                    <source src="audios/party/9民主监督.ogg" type="audio/ogg"/>
+                </audio>
+            </div>
+        </div>
+    </div>
+</nav>
+
+<!-- Modal -->
 
 </div>
 <script src="scripts/jquery-1.9.1.min.js"></script>
